--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,6 @@ on:
     branches: [ main ]
   workflow_dispatch:
 
-env:
-  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -26,16 +23,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    # Google Cloud 인증 - 수정된 부분
     - name: Authenticate to Google Cloud
-      uses: google-github-actions/auth@v1
+      uses: google-github-actions/auth@v2  # v2로 변경
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        credentials_json: '${{ secrets.GCP_SA_KEY }}'  # 작은따옴표 추가
 
     - name: Setup Cloud SDK
-      uses: google-github-actions/setup-gcloud@v1
+      uses: google-github-actions/setup-gcloud@v2  # v2로 변경
 
     - name: Update app.yaml with secrets
       run: |
+        sed -i "s/PLACEHOLDER/${{ secrets.DART_API_KEY }}/g" app.yaml
         sed -i "s/YOUR_DART_API_KEY/${{ secrets.DART_API_KEY }}/g" app.yaml
         sed -i "s/YOUR_BOT_TOKEN/${{ secrets.BOT_TOKEN }}/g" app.yaml
         sed -i "s/YOUR_CHAT_ID/${{ secrets.CHAT_ID }}/g" app.yaml
@@ -47,6 +46,7 @@ jobs:
     - name: Deploy cron jobs
       run: |
         gcloud app deploy cron.yaml --quiet --project=${{ secrets.GCP_PROJECT_ID }}
+      continue-on-error: true  # cron이 실패해도 계속 진행
 
     - name: Send deployment notification
       if: success()
